# PetarP02--matf-RI

./: .gitignore  README.md  SkriptaRI.md  pyproject.toml  sonar-scan.cmd
.ipynb_checkpoints/: SkriptaRI-checkpoint.md
notebooks/: Proba.ipynb  SkriptaRI-generated.md  SkriptaRI.ipynb  pyproject.toml
notebooks/.ipynb_checkpoints/: Proba-checkpoint.ipynb  SkriptaRI-checkpoint.ipynb  Untitled-checkpoint.ipynb
