[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Notebook strane za kurs RI"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
linopy = "^0.4.3"
gurobipy = "^11.0.0"
numpy = "^1.25"
ipywidgets = "^8.1.0" 
matplotlib = "^3.7.2" 
notebook-as-pdf = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
